# remote-files

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  checks.yml  main.yml  publish.yml  tag.yml  tests.yml
cli/: Cargo.toml  build.rs
cli/schemas/: configuration.schema.json
cli/src/: cli.rs  client.rs  configuration.rs  error.rs  lib.rs  main.rs  url_path.rs  util.rs
cli/src/buckets/: gcs.rs  mod.rs  s3.rs
configuration/: Cargo.toml
configuration/src/: lib.rs  url_path.rs  util.rs
remote-files/: Cargo.toml  build.rs
remote-files/schemas/: cli_state.schema.json  configuration.schema.json
remote-files/src/: client.rs  configuration.rs  error.rs  lib.rs  main.rs  util.rs
remote-files/src/cli/: bucket_inquire.rs  mod.rs
schemas/: configuration.schema.json
src/: cli.rs  client.rs  configuration.rs  error.rs  lib.rs  main.rs  utils.rs
src/buckets/: gcs.rs  s3.rs
tests/: client_operations.rs  configuration_schema_test.rs
tests/common/: mod.rs  tmp_dir.rs  url_utils.rs  wrapped_clients.rs
