[package]
name = "remote-files"
description = "a cli/lib wrapper of opendal to download/upload and manage remote files on buckets"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["file", "bucket", "s3", "gcs"]
repository = "https://github.com/amountainram/remote-files"

[package.metadata.release]
pre-release-commit-message = "'remote-files' tagged to version '{{version}}'"
tag-message = "'remote-files' tag '{{version}}'"
pre-release-replacements = [
  { file = "schemas/configuration.schema.json", search = "\\/remote-files\\/v[a-z0-9\\.-]+\\/", replace = "/remote-files/v{{version}}/" }
]
push = false
publish = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
futures = "0.3.29"
opendal = { version = "0.43.0", default-features = false, features = ["services-gcs", "services-s3", "native-tls"] }
prettytable = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
