[package]
name = "remote-files"
description = "a cli/lib wrapper of opendal to download/upload and manage remote files on buckets"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["file", "bucket", "s3", "gcs"]
repository = "https://github.com/amountainram/remote-files"

[package.metadata.release]
pre-release-commit-message = "'remote-files' tagged to version '{{version}}'"
tag-message = "'remote-files' tag '{{version}}'"
pre-release-replacements = [
  { file = "schemas/configuration.schema.json", search = "\\/remote-files\\/v[a-z0-9\\.-]+\\/", replace = "/remote-files/v{{version}}/" }
]
push = false
publish = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
futures = "0.3.30"
opendal = { version = "0.45.1", default-features = false, features = ["services-gcs", "services-s3", "native-tls"] }
prettytable = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_fs = "1.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
