[package]
name = "remote-files"
description = "a cli/lib wrapper of opendal to download/upload and manage remote files on buckets"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["file", "bucket", "s3", "gcs"]
repository = "https://github.com/amountainram/remote-files"

[package.metadata.release]
pre-release-commit-message = "'remote-files' tagged to version '{{version}}'"
tag-message = "'remote-files' tag '{{version}}'"
pre-release-replacements = [
  { file = "schemas/configuration.schema.json", search = "\\/remote-files\\/v[a-z0-9\\.-]+\\/", replace = "/remote-files/v{{version}}/" },
]
push = false
publish = false

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
configuration = { path = "../configuration" }
dirs = "5.0.1"
futures = "0.3.31"
indoc = "2.0.5"
inquire = "0.7.5"
opendal = { version = "0.50.0", features = ["services-gcs", "services-s3"] }
prettytable = "0.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabled = "0.16.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
] }

[dev-dependencies]
assert_fs = "1.1.2"
rstest.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

[build-dependencies]
configuration = { path = "../configuration" }
schemars.workspace = true
serde_json = "1.0.128"
