[package]
name = "configuration"
description = "json configuration for 'remote-files'"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/amountainram/remote-files"

[dependencies]
http = "1.1.0"
paste = "1.0.15"
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
